--- a/stable/vsphere-cpi/templates/daemonset.yaml
+++ b/stable/vsphere-cpi/templates/daemonset.yaml
@@ -47,10 +47,12 @@ spec:
       - key: node.cloudprovider.kubernetes.io/uninitialized
         value: "true"
         effect: NoSchedule
-      - key: node-role.kubernetes.io/master
+      - key: node-role.kubernetes.io/controlplane
+        value: "true"
         effect: NoSchedule
-      - key: node.kubernetes.io/not-ready
-        effect: NoSchedule
+      - key: node-role.kubernetes.io/etcd
+        value: "true"
+        effect: NoExecute
         operator: Exists
       {{- if .Values.daemonset.tolerations }}
       {{- toYaml .Values.daemonset.tolerations | indent 8 }}
